--- a/docker-php/Dockerfile
+++ b/docker-php/Dockerfile
@@ -24,9 +24,12 @@ RUN apt-get install -y python3
 RUN apt-get install -y python3-pip
 RUN apt-get install -y python3-dev
 RUN apt-get install -y default-libmysqlclient-dev
-
+RUN apt-get install -y gcc libssl-dev
 WORKDIR /usr/src/app
 COPY python-library.txt ./
+
+RUN pip3 install --upgrade pip
+RUN pip3 install --upgrade setuptools
 RUN pip3 install --no-cache-dir -r python-library.txt
 #RUN --mount=type=cache,target=/root/.cache/pip pip3 install -r python-library.txt
 COPY . .
